--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon"> 
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+     <!--Font Awesome  -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Jerin Easo Regi | Front End Developer</title>
   </head>
   <body>
@@ -39,10 +41,10 @@
         </div>
     </nav>
     <!-- Home Section -->
-    <section id="home" style="margin-top: 100px;">
+    <section id="home" style="margin-top: 70px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-xs-8">
+                <div class="col-md-8 col-xs-8 m-xs-auto">
                     <h2>Hello, I'm Jerin</h2>
                     <h1 id="bio">I'm a Front End Developer</h1>
                     <h2>Based in india.</h2>
@@ -52,7 +54,7 @@
                         Degree in computer science I am competent in all aspects of the
                         design process.
                     </p>
-                    <a href="./resume/JERIN EASO REGI.pdf" class="resumeBtn" target="_blank">View Resume</a>
+                    <a href="" class="resumeBtn" target="_blank">View Resume</a>
                 </div>
                 <div class="col-md-4 d-none d-sm-none d-md-block">
                     <img class="img-fluid img-responsive position-absolute my_image" src="./images/my_image.jpg" alt="my_image">
@@ -64,24 +66,59 @@
         </div>
     </section>
     <!-- Projects Section -->
-    <section id="projects">
+    <section id="projects mb-sm-4" style="margin-bottom: 90px;">
         <div class="container">
             <h1 class="text-center">PROJECTS</h1>
             <br><br>
-            <div class="row">
-                
+            <div class="row">        
                 <div class="col-md-8 col-xs-4 proj-sec">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad non debitis fugiat repellendus eligendi tempore nobis blanditiis voluptatem? Ab harum officia quis, adipisci praesentium saepe assumenda odio vero delectus aperiam.</p>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad non debitis fugiat repellendus eligendi tempore nobis blanditiis voluptatem? Ab harum officia quis, adipisci praesentium saepe assumenda odio vero delectus aperiam.</p> -->
                 </div>
                 <div class="col-md-4 col-xs-4 proj-desc p-4">
-                    <h2>Based in india.</h2>
+                    <h2>Project 1</h2>
                     <p id="bio_para">I bring an engineering perspective and intuitive user experience to
                         create products that people love to use. Persistence, obsessive
                         attention & creativity is what defines me. With a bachelor’s 
                         Degree in computer science I am competent in all aspects of the
                         design process.
                     </p>
-                    <a href="./resume/JERIN EASO REGI.pdf" class="resumeBtn" target="_blank">View Resume</a>
+                    <a href="./resume/JERIN EASO REGI.pdf" class="resumeBtn" target="_blank">View Project</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="up"><a href="#home"><i class="fa fa-4x fa-angle-double-up"></i></a></div>
+            <h1 class="text-center contact-head">CONTACT</h1>
+            <br><br>
+            <div class="row">
+                <div class="col-md-6 contact-mail">
+                    <p>Interested in having 3Cs ( conversation, coffee
+                        and constructive criticism?) or may be even
+                        hiring me? Feel free to drop me a message or
+                        email me at xyz@gmail.com</p> 
+                        <ul>
+                            <li class="d-md-inline-block d-sm-inline-block d-inline-block social-links"><a href=""><i class="fa fa-2x fa-github"></i></a></li>
+                            <li class="d-md-inline-block d-sm-inline-block d-inline-block social-links"><a href=""><i class="fa fa-2x fa-linkedin"></i></a></li>
+                            <li class="d-md-inline-block d-sm-inline-block d-inline-block social-links"><a href=""><i class="fa fa-2x fa-instagram"></i></a></li>
+                        </ul>
+                </div>
+                <div class="col-md-6 m-xs-auto">
+                    <form>
+                        <div class="form-group">
+                          <input type="text" class="form-control inputField" id="exampleFormControlInput1" placeholder="Enter your Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control inputField" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Enter your Message" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <a href="#home" class="subBtn" target="_blank">SUBMIT</a>
+                        </div>
+                      </form>
                 </div>
             </div>
         </div>
