Projects section updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <!-- Home Section -->
-    <section id="home" style="margin-top: 70px;">
+    <section id="home" class="mt-xs-4" style="margin-top: 70px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-xs-8 m-xs-auto">
@@ -76,13 +76,9 @@
                 </div>
                 <div class="col-md-4 col-xs-4 proj-desc p-4">
                     <h2>Project 1</h2>
-                    <p id="bio_para">I bring an engineering perspective and intuitive user experience to
-                        create products that people love to use. Persistence, obsessive
-                        attention & creativity is what defines me. With a bachelor’s 
-                        Degree in computer science I am competent in all aspects of the
-                        design process.
+                    <p id="bio_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, dignissimos vitae distinctio aliquid exercitationem eum tempore atque doloremque asperiores eius dicta tenetur velit, quibusdam sunt dolorem officia hic, aut cumque!
                     </p>
-                    <a href="./resume/JERIN EASO REGI.pdf" class="resumeBtn" target="_blank">View Project</a>
+                    <a href="#" class="resumeBtn" target="_blank">View Project</a>
                 </div>
             </div>
         </div>
